# welsh-test

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: Analysis.ipynb  CEFR-Test.ipynb
