[project]
name = "welsh-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pydub>=0.25.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
]
